# SPIButtonController_BBB

./: Cargo.toml  README.md
examples/: config.yaml
rust-bb-pru-spi-duplex/: Cargo.toml  IMPLEMENTATION_GUIDE.md  QUICK_START.md  RUST_TRANSLATION.md  install.sh
rust-bb-pru-spi-duplex/examples/: config.yaml  pru_spi_demo.rs
rust-bb-pru-spi-duplex/src/: command.rs  config.rs  ffi.rs  lib.rs  main.rs  pru_context.rs  pru_master.rs  pru_slave.rs  spi.rs
src/: command.rs  config.rs  daemon.rs  main.rs  spi.rs
systemd/: spi-button-controller.service
